// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`game.service should return empty list when all players are done 1`] = `
Array [
  Object {
    "figure": "rock",
    "player": "test",
    "row": 1,
    "tile": 1,
  },
  null,
]
`;

exports[`game.service should return new game state 1`] = `
Array [
  Object {
    "figure": "rock",
    "player": "test",
    "row": 1,
    "tile": 1,
  },
]
`;
